tests/sumo/tls/errors/duration0/errors.sumo
Error: Duration of phase 4 for tlLogic '0' program '2' is zero.
Quitting (on error).
